# fast-vanity-sniper

./: Cargo.toml  README.md  run.sh
src/: main.rs
